@@ -23,9 +23,9 @@
  */
 
 
-$plugin->version   = 2016081402;
+$plugin->version   = 2016112701;
 $plugin->requires  = 2016052300;//moodle 3.1.0
 $plugin->component =  'assignfeedback_poodll';
 $plugin->maturity  = MATURITY_STABLE;
-$plugin->release   = '3.0.1 (Build 2016081402)';
+$plugin->release   = '3.0.2 (Build 2016112701)';
 $plugin->dependencies = array('filter_poodll' => 2016081401);
